WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
206156
[macCatalyst] UI process crashes on launch after
r254101
https://bugs.webkit.org/show_bug.cgi?id=206156
Summary
[macCatalyst] UI process crashes on launch after r254101
Wenson Hsieh
Reported
2020-01-12 14:22:13 PST
...while attempting to soft link BackBoardServices for display brightness detection.
Attachments
Patch
(6.73 KB, patch)
2020-01-12 14:37 PST
,
Wenson Hsieh
bfulgham
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2020-01-12 14:22:34 PST
<
rdar://problem/58514942
>
Wenson Hsieh
Comment 2
2020-01-12 14:30:45 PST
frame #1: 0x000000010909c00f WebKit`initBKSDisplayBrightnessGetCurrent() at WebProcessPoolCocoa.mm:107:1 [opt] frame #2: 0x00000001090f1d3b WebKit`WebKit::WebProcessPool::initializeNewWebProcess(this=<unavailable>, process=0x0000000129be53c0, websiteDataStore=0x0000600000be3848, isPrewarmed=No) at WebProcessPool.cpp:1059:64 [opt] frame #3: 0x00000001090f22bd WebKit`WebKit::WebProcessPool::createNewWebProcess(this=0x00007f8d2e0d8008, websiteDataStore=0x0000600000be3848, isPrewarmed=No) at WebProcessPool.cpp:836:5 [opt] frame #4: 0x00000001090f3805 WebKit`WebKit::WebProcessPool::processForRegistrableDomain(this=0x00007f8d2e0d8008, websiteDataStore=0x0000600000be3848, page=<unavailable>, registrableDomain=<unavailable>) at WebProcessPool.cpp:0 [opt] frame #5: 0x00000001090b3c83 WebKit`WebKit::WebPageProxy::launchProcess(this=0x00007f8d2e0e9620, registrableDomain=0x00007ffee6ea3990, reason=InitialProcess) at WebPageProxy.cpp:766:33 [opt] frame #6: 0x00000001090b725f WebKit`WebKit::WebPageProxy::loadRequest(this=0x00007f8d2e0e9620, request=0x00007ffee6ea3b90, shouldOpenExternalURLsPolicy=<unavailable>, userData=<unavailable>) at WebPageProxy.cpp:1245:9 [opt] frame #7: 0x000000010901ab1d WebKit`-[WKWebView loadRequest:](self=<unavailable>, _cmd=<unavailable>, request=<unavailable>) at WKWebView.mm:701:27 [opt]
Wenson Hsieh
Comment 3
2020-01-12 14:37:40 PST
Created
attachment 387490
[details]
Patch
Brent Fulgham
Comment 4
2020-01-12 17:54:59 PST
Comment on
attachment 387490
[details]
Patch R=me
Wenson Hsieh
Comment 5
2020-01-12 18:21:12 PST
Comment on
attachment 387490
[details]
Patch Thanks for the review!
WebKit Commit Bot
Comment 6
2020-01-13 09:09:54 PST
Comment hidden (obsolete)
Comment on
attachment 387490
[details]
Patch Rejecting
attachment 387490
[details]
from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-02', 'land-attachment', '--force-clean', '--non-interactive', '--parent-command=commit-queue', 387490, '--port=mac']" exit_code: 2 cwd: /Volumes/Data/EWS/WebKit Logging in as
commit-queue@webkit.org
... Fetching:
https://bugs.webkit.org/attachment.cgi?id=387490&action=edit
Fetching:
https://bugs.webkit.org/show_bug.cgi?id=206156
&ctype=xml&excludefield=attachmentdata Processing 1 patch from 1 bug. Updating working directory Processing patch 387490 from
bug 206156
. Fetching:
https://bugs.webkit.org/attachment.cgi?id=387490
Authentication required Authentication required Authentication required Updating OpenSource From
https://git.webkit.org/git/WebKit
f3dea866b43..17265b441d3 master -> origin/master Partial-rebuilding .git/svn/refs/remotes/origin/master/.rev_map.268f45cc-cd09-0410-ab3c-d52691b4dbfc ... Currently at 254431 = f3dea866b435981d60d421826d9a3fbfa0473876
r254432
= 17265b441d342970b25dd93a8c7dc69af9f0b850 Done rebuilding .git/svn/refs/remotes/origin/master/.rev_map.268f45cc-cd09-0410-ab3c-d52691b4dbfc First, rewinding head to replay your work on top of it... Fast-forwarded master to refs/remotes/origin/master. Full output:
https://webkit-queues.webkit.org/results/13303501
Wenson Hsieh
Comment 7
2020-01-13 09:14:43 PST
Comment on
attachment 387490
[details]
Patch Committed
r254433
: <
https://trac.webkit.org/changeset/254433
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug